samples/_failures_safe/1761072624_5fffcd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46c00beb.c: In function ‘main’:
./samples/SAFE/__tmp_46c00beb.c:172:25: error: missing terminating " character
  172 |         fprintf(stderr, "Error
      |                         ^~~~~~
./samples/SAFE/__tmp_46c00beb.c:172:9: error: expected expression at end of input
  172 |         fprintf(stderr, "Error
      |         ^~~~~~~
./samples/SAFE/__tmp_46c00beb.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_46c00beb.c:172:9: error: expected declaration or statement at end of input
